--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         uses: actions/github-script@v4
         with:
-          github-token: ${{ secrets.TIZENAPI_GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
